; ModuleID = '/home/carl/AnghaBench/libgit2/tests/status/extr_submodules.c_test_status_submodules__0.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/status/extr_submodules.c_test_status_submodules__0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"submodules/.git\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"submodules/testrepo/.git\00", align 1
@.str.2 = private unnamed_addr constant [23 x i8] c"submodules/.gitmodules\00", align 1
@cb_status__count = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_status_submodules__0() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = call i32 (...) @setup_fixture_submodules()
  store i32 %2, i32* @g_repo, align 4
  %3 = call i32 @git_path_isdir(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @cl_assert(i32 %3)
  %5 = call i32 @git_path_isdir(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  %6 = call i32 @cl_assert(i32 %5)
  %7 = call i32 @git_path_isfile(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.2, i64 0, i64 0))
  %8 = call i32 @cl_assert(i32 %7)
  %9 = load i32, i32* @g_repo, align 4
  %10 = load i32, i32* @cb_status__count, align 4
  %11 = call i32 @git_status_foreach(i32 %9, i32 %10, i32* %1)
  %12 = call i32 @cl_git_pass(i32 %11)
  %13 = load i32, i32* %1, align 4
  %14 = call i32 @cl_assert_equal_i(i32 6, i32 %13)
  ret void
}

declare dso_local i32 @setup_fixture_submodules(...) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_path_isdir(i8*) #1

declare dso_local i32 @git_path_isfile(i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_status_foreach(i32, i32, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
